# ghcjs-bing-map

./: ghcjs-bing-map.cabal  stack.yaml
src/Bing/: Event.hs  Maps.hs
src/Bing/Maps/: Location.hs  Map.hs  Types.hs
src/Bing/Maps/Search/: GeocodeRequestOptions.hs  GeocodeResult.hs  PlaceResult.hs  SearchManager.hs
