name:                ghcjs-bing-map
version:             0.1.0.0
synopsis:            GHCJS wrapper for the Bing Map AJAX Control V7.0
description:         Please see README.md
homepage:            https://github.com/manyoo/ghcjs-bing-map#readme
license:             BSD3
license-file:        LICENSE
author:              Eric Wong
maintainer:          ericsyw@gmail.com
copyright:           2016 Eric Wong
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Bing.Maps.Types,
                       Bing.Maps.Location,
                       Bing.Maps.Map,
                       Bing.Event,
                       Bing.Maps.Search.PlaceResult,
                       Bing.Maps.Search.GeocodeRequestOptions,
                       Bing.Maps.Search.GeocodeResult,
                       Bing.Maps.Search.SearchManager,
                       Bing.Maps
  build-depends:       base >= 4.7 && < 5
                     , ghcjs-base
                     , ghcjs-dom
  default-language:    Haskell2010

test-suite ghcjs-bing-map-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , ghcjs-bing-map
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/manyoo/ghcjs-bing-map
